spacing and size fixes

--- a/template7b - drone2-nextjs-ssg/abdronespecialists/styles/AppHeader.module.css
+++ b/template7b - drone2-nextjs-ssg/abdronespecialists/styles/AppHeader.module.css
@@ -155,8 +155,6 @@
     composes: link from "./_shared.module.css";
   }
   .mediaIcon {
-    width: 20px;
+    width: 20px !important;
   }
-
-  
 }
