--- a/template7b - drone2-nextjs-ssg/abdronespecialists/styles/Home.module.css
+++ b/template7b - drone2-nextjs-ssg/abdronespecialists/styles/Home.module.css
@@ -144,7 +144,7 @@
     display: none;
   }
   .portfolioText {
-    padding: spacing-md;
+    padding: spacing-sm spacing-md;
     width: 100%;
     max-width: max-content-width-half;
     justify-items: flex-start;
@@ -154,15 +154,15 @@
   }
 }
 @media bp-lg {
-  .portfolioHeader {
-    height: 600px;
+  .sectionPortfolio {
+    padding: calc(spacing-md * 2) 0;
   }
   .portfolioCustomers {
     margin: 0 0 10px;
     grid-template-columns: repeat(5, 1fr);
   }
   .portfolioText {
-    padding: spacing-lg;
+    padding-left: spacing-lg;
   }
   .portfolioLogo {
     height: 40px;
